src/objects/AMS_Oscar_Change_History__c.object
<CustomObject>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OSCAR__c</fullName>
        <label>OSCAR</label>
        <referenceTo>AMS_OSCAR__c</referenceTo>
        <relationshipLabel>AMS Oscar Changes History</relationshipLabel>
        <relationshipName>AMS_Oscar_Changes_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AMS Oscar Change History</label>
    <nameField>
        <displayFormat>OCH-{000000}</displayFormat>
        <label>AMS Oscar Change History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMS Oscar Changes History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>